--- a/FlightSearchAPI/pom.xml
+++ b/FlightSearchAPI/pom.xml
@@ -89,6 +89,16 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>6.4.0-M1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>6.4.0-M1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
